--- a/wavelibrary/src/main/res/values/strings.xml
+++ b/wavelibrary/src/main/res/values/strings.xml
@@ -14,13 +14,14 @@
     <string name="reset_fm">重置私人FM</string>
     <string name="private_person_title">运动电台设置</string>
     <string name="complete_txt">完成</string>
+    <string name="back_txt">返回</string>
     <string name="change_music_library_size">更改曲库大小</string>
     <string name="change_singer">更改音乐口味</string>
 
     <string name="choose_singer_title_one">为了确定您的音乐口味</string>
     <string name="choose_singer_title_two">请选择三位你喜欢的艺术家</string>
     <string name="search_singer">搜索歌手</string>
-    <string name="open_run_radio">开启运动电台</string>
+    <string name="open_run_radio">确认选择</string>
     <string name="search_singer_name">搜索您喜欢的艺术家</string>
     <string name="choose_singer_title">音乐口味设置</string>
     <string name="cancel">取消</string>
